# LMPVC

./: README.md
experiments/: .gitignore  README.md  codegen_log.txy  codegen_test_cli.py  gen_log.txt  input.txt  lmpvc.csv  lmpvc_gen_log.txt  lmpvc_log.txt  log.txt  log0.txt  log1.txt  output.csv  output.txt  preamble.txt  results_summary.txt  test0.csv  test1.csv  test_log.txt  visualize.py
lmpvc_ros1/: .gitignore  Dockerfile  README.md  camera.bash  detectron2.rviz  peak_vram.bash
lmpvc_ros1/docker_scripts/: docker_build.bash  docker_run.bash  docker_stop.bash  docker_terminal.bash
lmpvc_ros1/src/: .gitignore
lmpvc_ros1/src/lmpvc_ros1_compatibility/: CMakeLists.txt  package.xml
lmpvc_ros1/src/lmpvc_ros1_compatibility/launch/: camera_calibration.launch  controller_adapter.launch  detector_adapter.launch
lmpvc_ros1/src/lmpvc_ros1_compatibility/scripts/: codegen_cli.py  codegen_ros1_web_bridge.py  codegen_srv.py  controller.py  controller_adapter.py  controller_cli.py  controller_srv.py  detector_adapter.py  detector_sub.py  grasp_client.py  opendr_detection.py  opendr_detection_data.json  pose_conversion.py  pose_recorder.py
lmpvc_ros1/src/lmpvc_ros1_compatibility/srv/: CodeGen.srv
lmpvc_ros2/: .gitignore  Dockerfile  Dockerfile-cuda  README.md  docker-compose-cpu.yml  docker-compose.yml  hf_setup.bash  requirements.txt  venv.txt
lmpvc_ros2/docker_scripts/: docker_build.bash  docker_build_cuda.bash  docker_run.bash  docker_run_cuda.bash  docker_stop.bash  docker_terminal.bash
lmpvc_ros2/launch/: lmpvc_audio_launch.py  lmpvc_codegen_launch.py  lmpvc_hardware_launch.py  lmpvc_main_launch.py
lmpvc_ros2/models/: .gitignore
lmpvc_ros2/src/: .gitignore  README.md
lmpvc_ros2/src/fr3_moveit_config/: CMakeLists.txt  package.xml
lmpvc_ros2/src/fr3_moveit_config/config/: fr3_controllers.yaml  fr3_rcm_controllers.yaml  fr3_ros_controllers.yaml
lmpvc_ros2/src/fr3_moveit_config/launch/: move_group.launch.py  moveit.launch.py
lmpvc_ros2/src/fr3_moveit_config/srdf/: fr3_arm.srdf.xacro  fr3_arm.xacro
lmpvc_ros2/src/fr3_moveit_config/test/: srdf_tests.py
lmpvc_ros2/src/lmpvc_codegen/: README.md  package.xml  setup.cfg  setup.py
lmpvc_ros2/src/lmpvc_codegen/config/: codegen_config.json
lmpvc_ros2/src/lmpvc_codegen/lmpvc_codegen/: README.md  codegen.py  codegen_cache.py  codegen_config.json  codegen_demo_cache.py  codegen_srv.py  codegen_tcp_cli.py  codegen_tcp_client.py  codegen_tcp_srv.py  comms.py  demo_model.py  preamble.txt  starcoder2_gguf.py  starcoder2_inference_api.py  starcoder2_local.py
lmpvc_ros2/src/lmpvc_controller/: CMakeLists.txt  package.xml  setup.py
lmpvc_ros2/src/lmpvc_controller/include/lmpvc_controller/: limit_cartesian_speed.hpp  moveit_controller.hpp  moveit_services.hpp
lmpvc_ros2/src/lmpvc_controller/launch/: fr3_gazebo_rcm_moveit.launch.py  fr3_gazebo_rcm_moveit_tests.launch.py  fr3_lmpvc_controller.launch.py  fr3_lmpvc_controller_tests.launch.py  fr3_rcm_moveit.launch.py  fr3_rcm_moveit_tests.launch.py
lmpvc_ros2/src/lmpvc_controller/lmpvc_controller/: controller_srv.py  ros2_web_bridge.py
lmpvc_ros2/src/lmpvc_controller/src/: limit_cartesian_speed.cpp  lmpvc_controller.cpp  moveit_controller.cpp  moveit_services.cpp
lmpvc_ros2/src/lmpvc_controller_bridge/: package.xml  setup.cfg  setup.py
lmpvc_ros2/src/lmpvc_controller_bridge/lmpvc_controller_bridge/: README.md  comms.py  controller_srv.py  ros2_web_bridge.py
lmpvc_ros2/src/lmpvc_core/: README.md  package.xml  setup.cfg  setup.py
lmpvc_ros2/src/lmpvc_core/config/: core_config.json  demo_config.json  demo_config_prerecorded.json
lmpvc_ros2/src/lmpvc_core/launch/: demo.launch.py  demo_full.launch.py  demo_gpu.launch.py  modules.launch.py
lmpvc_ros2/src/lmpvc_core/lmpvc_core/: README.md  codegen_cli.py  controller_cli.py  core_node.py  demo_handler.py  detector_cli.py  listener_cli.py  main.py  policy_bank.py  robot.py  ros2_cli.py  talker_cli.py  voice_control.py
lmpvc_ros2/src/lmpvc_core/lmpvc_core/policies/: index.json
lmpvc_ros2/src/lmpvc_core/lmpvc_core/policies/src/: bolts_check.py  full_check.py  goodbye.py  handover.py  hello.py  jiggle_sequence.py  lookat.py  parts_check.py  parts_check_old.py  pick.py  place.py  rotate.py  serving_check.py
lmpvc_ros2/src/lmpvc_detector/: package.xml  setup.cfg  setup.py
lmpvc_ros2/src/lmpvc_detector/config/: test_objects.json
lmpvc_ros2/src/lmpvc_detector/lmpvc_detector/: README.md  detector_srv.py  detector_web_client.py  pose_recorder.py  simple_detection_manager.py
lmpvc_ros2/src/lmpvc_fr3_moveit_config/: CMakeLists.txt  package.xml
lmpvc_ros2/src/lmpvc_fr3_moveit_config/config/: kinematics.yaml
lmpvc_ros2/src/lmpvc_fr3_moveit_config/launch/: move_group.launch.py  moveit.launch.py
lmpvc_ros2/src/lmpvc_gripper/: README.md
lmpvc_ros2/src/lmpvc_gripper/lmpvc_gripper/: CMakeLists.txt  package.xml
lmpvc_ros2/src/lmpvc_gripper/lmpvc_gripper/include/lmpvc_gripper/: gripper_base.hpp
lmpvc_ros2/src/lmpvc_gripper/lmpvc_gripper/src/: basic_gripper.cpp  gripper_base.cpp
lmpvc_ros2/src/lmpvc_gripper/lmpvc_gripper_dummy_plugins/: CMakeLists.txt  package.xml  plugins.xml
lmpvc_ros2/src/lmpvc_gripper/lmpvc_gripper_dummy_plugins/include/lmpvc_gripper_dummy_plugins/: dummy_gripper.hpp
lmpvc_ros2/src/lmpvc_gripper/lmpvc_gripper_dummy_plugins/src/: dummy_gripper.cpp
lmpvc_ros2/src/lmpvc_gripper/lmpvc_gripper_franka_plugins/: CMakeLists.txt  package.xml  plugins.xml
lmpvc_ros2/src/lmpvc_gripper/lmpvc_gripper_franka_plugins/include/lmpvc_gripper_franka_plugins/: franka_hand.hpp
lmpvc_ros2/src/lmpvc_gripper/lmpvc_gripper_franka_plugins/src/: franka_hand.cpp
lmpvc_ros2/src/lmpvc_interfaces/: CMakeLists.txt  package.xml
lmpvc_ros2/src/lmpvc_listener/: package.xml  setup.cfg  setup.py
lmpvc_ros2/src/lmpvc_talker/: README.md  package.xml  setup.cfg  setup.py
lmpvc_ros2/src/setup_scripts/: lmpvc_init.bash  lmpvc_modules.bash  lmpvc_ws.bash
lmpvc_ros2/tests/latency/: codegen_test_cli.py  input.txt  visualize.py
lmpvc_ros2/utility_scripts/: download_piper_voices.bash  peak_vram.bash
(+14 files in other folders)
