<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lmpvc_core</name>
  <version>0.2.0</version>
  <description>LMPVC core voice control interface node</description>
  <maintainer email="ossi.parikka@tuni.fi">parikkao</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>lmpvc_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
