<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lmpvc_gripper_dummy_plugins</name>
  <version>0.2.0</version>
  <description>Example plugins for lmpvc_gripper, useful for testing purposes.</description>
  <maintainer email="ossi.parikka@tuni.fi">parikkao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>lmpvc_gripper</depend>
  <depend>lmpvc_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
